Closed Bug 360792 Opened 19 years ago Closed 18 years ago

mail.delete_matches_sort_order does not work when using imap mark as deleted model

Categories

(Thunderbird :: Mail Window Front End, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird 3

People

(Reporter: mkmelin, Assigned: mkmelin)

References

Details

(Keywords: fixed1.8.1.2)

Attachments

(1 file)

Follow up to bug 349763. The pref "mail.delete_matches_sort_order" does not work when using the imap mark-as-deleted model. I don't see a reason it shouldn't.
Attached patch proposed fixSplinter Review
Enables the pref for imap mark as deleted model.
Assignee: mscott → mkmelin+mozilla
Status: NEW → ASSIGNED
Attachment #245771 - Flags: superreview?(mscott)
Attachment #245771 - Flags: review?(mscott)
Comment on attachment 245771 [details] [diff] [review] proposed fix Scott's on vacation - taking review. This looks good to me.
Attachment #245771 - Flags: superreview?(mscott)
Attachment #245771 - Flags: superreview+
Attachment #245771 - Flags: review?(mscott)
Attachment #245771 - Flags: review+
Whiteboard: [checkin needed]
mozilla/mailnews/base/src/nsMsgDBView.cpp 1.257
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Whiteboard: [checkin needed]
Target Milestone: --- → Thunderbird 3
Attachment #245771 - Flags: approval-thunderbird2?
How's this been looking on the trunk? I haven't heard of any regressions, but at the same time I don't know how much trunk test coverage we get with users using the imap mark as deleted model.
I can only speak for myself. I have had the pref set to true and haven't had any problems with it.
Attachment #245771 - Flags: approval-thunderbird2? → approval-thunderbird2+
Whiteboard: [checkin needed (1.8 branch)]
mozilla/mailnews/base/src/nsMsgDBView.cpp 1.222.4.29
Keywords: fixed1.8.1.2
Whiteboard: [checkin needed (1.8 branch)]
Is there any way to disable movement at all? Let's say you're not using the trashcan or hiding deleted messages. You're just using deleting them in place on the IMAP server, to be purged later. It would be nice to have the option to simply stay on the deleted message and not move at all, regardless of sort order. If the message wasn't being left visible I can certainly understand what moving is necessary. Personally I find it distracting to have the message cursor moving around. I prefer to use the arrow keys to do it myself. So this isn't a bug, but a feature request. Where's the right place to raise it?
In a new bug, with severity enh.
Thank you Magnus, I raised it here: https://bugzilla.mozilla.org/show_bug.cgi?id=396458
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: